--- a/Api/Properties/launchSettings.json
+++ b/Api/Properties/launchSettings.json
@@ -22,7 +22,7 @@
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "DATABASE_CONNECTION_STRING": "Server=172.31.31.10,1433;Database=cashflow;Pooling=true;user=sa;Password=Mssql123",
+        "DATABASE_CONNECTION_STRING": "Server=172.31.31.10,1433;Database=cashflow;Pooling=true;user=sa;Password=Mssql123;TrustServerCertificate=True;",
         "COOKIE_EXPIRES_IN_MINUTES": "1440",
         "SECRET_JWT_KEY": "!@#$%&*()SecretKey!WebApi!@#$%&*()",
         "DATA_ENCRYPTION_KEY": "1234567890123456",
