--- a/Site/package.json
+++ b/Site/package.json
@@ -5,48 +5,49 @@
     "build:prod": "webpack --mode production"
   },
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.16.8",
-    "@babel/preset-env": "^7.16.4",
-    "@babel/preset-react": "^7.16.0",
-    "@babel/runtime": "^7.24.5",
-    "axios": "^1.6.8",
+    "@babel/plugin-transform-runtime": "^7.25.9",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/runtime": "^7.26.0",
+    "axios": "^1.7.9",
     "babel-core": "^6.26.3",
     "babel-jest": "^29.7.0",
-    "babel-loader": "^9.1.3",
-    "eslint": "^9.2.0",
-    "eslint-plugin-react": "^7.27.1",
+    "babel-loader": "^9.2.1",
+    "eslint": "^9.18.0",
+    "eslint-plugin-react": "^7.37.4",
     "progress-bar-webpack-plugin": "^2.1.0",
     "react": "^18.3.1",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
-    "react-hot-loader": "^4.13.0",
-    "react-number-format": "^5.3.4",
-    "react-redux": "^9.1.2",
-    "react-toastify": "^10.0.5",
+    "react-hot-loader": "^4.13.1",
+    "react-number-format": "^5.4.3",
+    "react-redux": "^9.2.0",
+    "react-toastify": "^10.0.6",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "style-loader": "^4.0.0",
-    "styled-components": "^6.1.11",
-    "webpack": "^5.64.4",
+    "styled-components": "^6.1.14",
+    "webpack": "^5.97.1",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
+    "webpack-dev-server": "^5.2.0"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.17",
-    "@mui/material": "^5.15.17",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.3.1",
+    "@mui/material": "^6.3.1",
+    "@types/react": "^19.0.6",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^12.0.2",
-    "css-loader": "^7.1.1",
+    "css-loader": "^7.1.2",
     "date-fns": "^3.6.0",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "react-currency-mask": "^1.3.2",
-    "react-router-dom": "^6.0.2",
+    "html-webpack-plugin": "^5.6.3",
+    "react-currency-mask": "^1.3.3",
+    "react-router-dom": "^6.28.1",
     "react-sidebar": "^3.0.2",
-    "reactstrap": "^9.0.1",
-    "recharts": "^2.1.6",
+    "reactstrap": "^9.2.3",
+    "recharts": "^2.15.0",
     "redux-logger": "^3.0.6",
     "styles": "link:@mui/material/styles"
   }
