--- a/Api/Properties/launchSettings.json
+++ b/Api/Properties/launchSettings.json
@@ -19,7 +19,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5000",
+      "applicationUrl": "http://*:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DATABASE_CONNECTION_STRING": "Server=172.31.31.10,1433;Database=cashflow;Pooling=true;user=sa;Password=Mssql123;TrustServerCertificate=True;",
@@ -27,7 +27,8 @@
         "SECRET_JWT_KEY": "!@#$%&*()SecretKey!WebApi!@#$%&*()",
         "DATA_ENCRYPTION_KEY": "1234567890123456",
         "GOOGLE_CLIENT_ID": "123.apps.googleusercontent.com",
-        "GOOGLE_OAUTH_URL": "https://oauth2.googleapis.com"
+        "GOOGLE_OAUTH_ACCESS_TOKEN": "https://www.googleapis.com/oauth2/v2/userinfo",
+        "GOOGLE_OAUTH_ID_TOKEN": "https://oauth2.googleapis.com/tokeninfo"
       }
     }
   }
